bug 332108 : can attach but cannot send a file with non-ASCII name (r=mscott, sr=bienvenu)